Add methods to get all user ingresses and configmaps
