# pkg/router/handlers/ingresses.go
@@ -6,9 +6,11 @@ import (
 
 	"net/http"
 
+	"git.containerum.net/ch/resource-service/pkg/models/ingress"
 	m "git.containerum.net/ch/resource-service/pkg/router/middleware"
 	"git.containerum.net/ch/resource-service/pkg/server"
 	kubtypes "github.com/containerum/kube-client/pkg/model"
+	"github.com/containerum/utils/httputil"
 )
 
 type IngressHandlers struct {
@@ -46,7 +48,43 @@ func (h *IngressHandlers) GetIngressesListHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, resp)
 }
 
-// swagger:operation GET /namespaces/{namespace}/ingresses/{ingress} Ingress GetIngressHandler
+// swagger:operation GET /ingresses Ingress GetSelectedIngressesList
+// Get user ingresses list.
+//
+// ---
+// x-method-visibility: public
+// parameters:
+//  - $ref: '#/parameters/UserIDHeader'
+//  - $ref: '#/parameters/UserRoleHeader'
+//  - $ref: '#/parameters/UserNamespaceHeader'
+// responses:
+//  '200':
+//    description: ingresses list
+//    schema:
+//      $ref: '#/definitions/IngressesResponse'
+//  default:
+//    $ref: '#/responses/error'
+func (h *IngressHandlers) GetSelectedIngressesListHandler(ctx *gin.Context) {
+	resp := ingress.IngressesResponse{Ingresses: ingress.ListIngress{}}
+	role := m.GetHeader(ctx, httputil.UserRoleXHeader)
+	if role == m.RoleUser {
+		nsList := ctx.MustGet(m.UserNamespaces).(*m.UserHeaderDataMap)
+		var nss []string
+		for k := range *nsList {
+			nss = append(nss, k)
+		}
+		ret, err := h.GetSelectedIngressesList(ctx.Request.Context(), nss)
+		if err != nil {
+			ctx.AbortWithStatusJSON(h.HandleError(err))
+			return
+		}
+		resp = *ret
+	}
+
+	ctx.JSON(http.StatusOK, resp)
+}
+
+// swagger:operation GET /namespaces/{namespace}/ingresses/{ingress} Ingress GetIngress
 // Get ingresses list.
 //
 // ---
@@ -80,7 +118,7 @@ func (h *IngressHandlers) GetIngressHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, resp)
 }
 
-// swagger:operation POST /namespaces/{namespace}/ingresses Ingress CreateIngressHandler
+// swagger:operation POST /namespaces/{namespace}/ingresses Ingress CreateIngress
 // Create ingress.
 //
 // ---
@@ -120,7 +158,7 @@ func (h *IngressHandlers) CreateIngressHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, createdIngress)
 }
 
-// swagger:operation PUT /namespaces/{namespace}/ingresses/{ingress} Ingress UpdateIngressHandler
+// swagger:operation PUT /namespaces/{namespace}/ingresses/{ingress} Ingress UpdateIngress
 // Update ingress.
 //
 // ---
@@ -165,7 +203,7 @@ func (h *IngressHandlers) UpdateIngressHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusAccepted, updatedIngress)
 }
 
-// swagger:operation DELETE /namespaces/{namespace}/ingresses/{ingress} Ingress DeleteIngressHandler
+// swagger:operation DELETE /namespaces/{namespace}/ingresses/{ingress} Ingress DeleteIngress
 // Delete ingress.
 //
 // ---
@@ -196,7 +234,7 @@ func (h *IngressHandlers) DeleteIngressHandler(ctx *gin.Context) {
 	ctx.Status(http.StatusAccepted)
 }
 
-// swagger:operation DELETE /namespaces/{namespace}/ingresses Ingress DeleteAllIngressesHandler
+// swagger:operation DELETE /namespaces/{namespace}/ingresses Ingress DeleteAllIngresses
 // Delete all ingresses.
 //
 // ---
