# swagger.json
@@ -12,13 +12,62 @@
     "version": "0.0.1"
   },
   "paths": {
+    "/configmaps": {
+      "get": {
+        "tags": [
+          "ConfigMap"
+        ],
+        "summary": "Get user configmaps list.",
+        "operationId": "GetSelectedConfigMapsList",
+        "parameters": [
+          {
+            "type": "string",
+            "format": "uuid",
+            "name": "X-User-ID",
+            "in": "header",
+            "required": true
+          },
+          {
+            "enum": [
+              "user",
+              "admin"
+            ],
+            "type": "string",
+            "name": "X-User-Role",
+            "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "X-User-Namespace",
+            "in": "header",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "configmaps list",
+            "schema": {
+              "$ref": "#/definitions/ConfigMapsResponse"
+            }
+          },
+          "default": {
+            "description": "cherry error",
+            "schema": {
+              "$ref": "#/definitions/errOAIGen"
+            }
+          }
+        },
+        "x-method-visibility": "public"
+      }
+    },
     "/domains": {
       "get": {
         "tags": [
           "Domain"
         ],
         "summary": "Get domains list.",
-        "operationId": "GetDomainsListHandler",
+        "operationId": "GetDomainsList",
         "parameters": [
           {
             "enum": [
@@ -62,7 +111,7 @@
           "Domain"
         ],
         "summary": "Add domain.",
-        "operationId": "AddDomainHandler",
+        "operationId": "AddDomain",
         "parameters": [
           {
             "enum": [
@@ -105,7 +154,7 @@
           "Domain"
         ],
         "summary": "Get domain.",
-        "operationId": "GetDomainHandler",
+        "operationId": "GetDomain",
         "parameters": [
           {
             "enum": [
@@ -178,13 +227,62 @@
         "x-method-visibility": "public"
       }
     },
+    "/ingresses": {
+      "get": {
+        "tags": [
+          "Ingress"
+        ],
+        "summary": "Get user ingresses list.",
+        "operationId": "GetSelectedIngressesList",
+        "parameters": [
+          {
+            "type": "string",
+            "format": "uuid",
+            "name": "X-User-ID",
+            "in": "header",
+            "required": true
+          },
+          {
+            "enum": [
+              "user",
+              "admin"
+            ],
+            "type": "string",
+            "name": "X-User-Role",
+            "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "X-User-Namespace",
+            "in": "header",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ingresses list",
+            "schema": {
+              "$ref": "#/definitions/IngressesResponse"
+            }
+          },
+          "default": {
+            "description": "cherry error",
+            "schema": {
+              "$ref": "#/definitions/errOAIGen"
+            }
+          }
+        },
+        "x-method-visibility": "public"
+      }
+    },
     "/namespaces": {
       "delete": {
         "tags": [
           "Resources"
         ],
         "summary": "Delete all user resources.",
-        "operationId": "DeleteAllResourcesHandler",
+        "operationId": "DeleteAllResources",
         "parameters": [
           {
             "type": "string",
@@ -224,7 +322,7 @@
           "Resources"
         ],
         "summary": "Delete all resources in namespace.",
-        "operationId": "DeleteAllResourcesInNamespaceHandler",
+        "operationId": "DeleteAllResourcesInNamespace",
         "parameters": [
           {
             "type": "string",
@@ -253,7 +351,7 @@
           "ConfigMap"
         ],
         "summary": "Get configmaps list.",
-        "operationId": "GetConfigMapsListHandler",
+        "operationId": "GetConfigMapsList",
         "parameters": [
           {
             "type": "string",
@@ -306,7 +404,7 @@
           "ConfigMap"
         ],
         "summary": "Create configmap.",
-        "operationId": "CreateConfigMapHandler",
+        "operationId": "CreateConfigMap",
         "parameters": [
           {
             "type": "string",
@@ -366,7 +464,7 @@
           "ConfigMap"
         ],
         "summary": "Delete configmap.",
-        "operationId": "DeleteAllConfigMapsHandler",
+        "operationId": "DeleteAllConfigMaps",
         "parameters": [
           {
             "type": "string",
@@ -395,7 +493,7 @@
           "ConfigMap"
         ],
         "summary": "Get configmaps list.",
-        "operationId": "GetConfigMapHandler",
+        "operationId": "GetConfigMap",
         "parameters": [
           {
             "type": "string",
@@ -454,7 +552,7 @@
           "ConfigMap"
         ],
         "summary": "Delete configmap.",
-        "operationId": "DeleteConfigMapHandler",
+        "operationId": "DeleteConfigMap",
         "parameters": [
           {
             "type": "string",
@@ -512,7 +610,7 @@
           "Deployment"
         ],
         "summary": "Get deployments list.",
-        "operationId": "GetDeploymentsListHandler",
+        "operationId": "GetDeploymentsList",
         "parameters": [
           {
             "type": "string",
@@ -565,7 +663,7 @@
           "Deployment"
         ],
         "summary": "Create deployment.",
-        "operationId": "CreateDeploymentHandler",
+        "operationId": "CreateDeployment",
         "parameters": [
           {
             "type": "string",
@@ -625,7 +723,7 @@
           "Deployment"
         ],
         "summary": "Delete all deployments in namespace.",
-        "operationId": "DeleteAllDeploymentsHandler",
+        "operationId": "DeleteAllDeployments",
         "parameters": [
           {
             "type": "string",
@@ -654,7 +752,7 @@
           "Deployment"
         ],
         "summary": "Get deployment active version.",
-        "operationId": "GetActiveDeploymentHandler",
+        "operationId": "GetActiveDeployment",
         "parameters": [
           {
             "type": "string",
@@ -779,7 +877,7 @@
           "Deployment"
         ],
         "summary": "Delete deployment.",
-        "operationId": "DeleteDeploymentHandler",
+        "operationId": "DeleteDeployment",
         "parameters": [
           {
             "type": "string",
@@ -837,7 +935,7 @@
           "Deployment"
         ],
         "summary": "Update image in deployments container.",
-        "operationId": "SetContainerImageHandler",
+        "operationId": "SetContainerImage",
         "parameters": [
           {
             "type": "string",
@@ -899,7 +997,7 @@
           "Deployment"
         ],
         "summary": "Update deployments replicas count.",
-        "operationId": "SetReplicasHandler",
+        "operationId": "SetReplicas",
         "parameters": [
           {
             "type": "string",
@@ -967,7 +1065,7 @@
           "Deployment"
         ],
         "summary": "Get deployments list.",
-        "operationId": "GetDeploymentVersionsListHandler",
+        "operationId": "GetDeploymentVersionsList",
         "parameters": [
           {
             "type": "string",
@@ -1028,7 +1126,7 @@
           "Deployment"
         ],
         "summary": "Get deployment version.",
-        "operationId": "GetDeploymentVersionHandler",
+        "operationId": "GetDeploymentVersion",
         "parameters": [
           {
             "type": "string",
@@ -1093,7 +1191,7 @@
           "Deployment"
         ],
         "summary": "Rename deployment version.",
-        "operationId": "RenameVersionHandler",
+        "operationId": "RenameVersion",
         "parameters": [
           {
             "type": "string",
@@ -1165,7 +1263,7 @@
           "Deployment"
         ],
         "summary": "Create active deployment version.",
-        "operationId": "ChangeActiveDeploymentHandler",
+        "operationId": "ChangeActiveDeployment",
         "parameters": [
           {
             "type": "string",
@@ -1230,7 +1328,7 @@
           "Deployment"
         ],
         "summary": "Delete deployment version (not active).",
-        "operationId": "DeleteDeploymentVersionHandler",
+        "operationId": "DeleteDeploymentVersion",
         "parameters": [
           {
             "type": "string",
@@ -1294,7 +1392,7 @@
           "Deployment"
         ],
         "summary": "Compare deployment versions with previous version.",
-        "operationId": "DiffDeploymentPreviousVersionsHandler",
+        "operationId": "DiffDeploymentPreviousVersions",
         "parameters": [
           {
             "type": "string",
@@ -1335,7 +1433,7 @@
           "Deployment"
         ],
         "summary": "Compare two deployment versions.",
-        "operationId": "DiffDeploymentVersionsHandler",
+        "operationId": "DiffDeploymentVersions",
         "parameters": [
           {
             "type": "string",
@@ -1435,7 +1533,7 @@
           "Ingress"
         ],
         "summary": "Create ingress.",
-        "operationId": "CreateIngressHandler",
+        "operationId": "CreateIngress",
         "parameters": [
           {
             "type": "string",
@@ -1495,7 +1593,7 @@
           "Ingress"
         ],
         "summary": "Delete all ingresses.",
-        "operationId": "DeleteAllIngressesHandler",
+        "operationId": "DeleteAllIngresses",
         "parameters": [
           {
             "type": "string",
@@ -1524,7 +1622,7 @@
           "Ingress"
         ],
         "summary": "Get ingresses list.",
-        "operationId": "GetIngressHandler",
+        "operationId": "GetIngress",
         "parameters": [
           {
             "type": "string",
@@ -1583,7 +1681,7 @@
           "Ingress"
         ],
         "summary": "Update ingress.",
-        "operationId": "UpdateIngressHandler",
+        "operationId": "UpdateIngress",
         "parameters": [
           {
             "type": "string",
@@ -1649,7 +1747,7 @@
           "Ingress"
         ],
         "summary": "Delete ingress.",
-        "operationId": "DeleteIngressHandler",
+        "operationId": "DeleteIngress",
         "parameters": [
           {
             "type": "string",
@@ -1707,7 +1805,7 @@
           "Service"
         ],
         "summary": "Get services list.",
-        "operationId": "GetServicesListHandler",
+        "operationId": "GetServicesList",
         "parameters": [
           {
             "type": "string",
@@ -1760,7 +1858,7 @@
           "Service"
         ],
         "summary": "Create service.",
-        "operationId": "CreateServiceHandler",
+        "operationId": "CreateService",
         "parameters": [
           {
             "type": "string",
@@ -1819,8 +1917,8 @@
         "tags": [
           "Service"
         ],
-        "summary": "Delete service.",
-        "operationId": "DeleteAllServicesHandler",
+        "summary": "Delete all services.",
+        "operationId": "DeleteAllServices",
         "parameters": [
           {
             "type": "string",
@@ -1849,7 +1947,7 @@
           "Service"
         ],
         "summary": "Get services list.",
-        "operationId": "GetServiceHandler",
+        "operationId": "GetService",
         "parameters": [
           {
             "type": "string",
@@ -1908,7 +2006,7 @@
           "Service"
         ],
         "summary": "Update service.",
-        "operationId": "UpdateServiceHandler",
+        "operationId": "UpdateService",
         "parameters": [
           {
             "type": "string",
@@ -1974,7 +2072,7 @@
           "Service"
         ],
         "summary": "Delete service.",
-        "operationId": "DeleteServiceHandler",
+        "operationId": "DeleteService",
         "parameters": [
           {
             "type": "string",
@@ -2032,7 +2130,7 @@
           "Service"
         ],
         "summary": "Delete all solution deployments.",
-        "operationId": "DeleteAllSolutionDeploymentsHandler",
+        "operationId": "DeleteAllSolutionDeployments",
         "parameters": [
           {
             "type": "string",
@@ -2067,7 +2165,7 @@
           "Service"
         ],
         "summary": "Delete all solution services.",
-        "operationId": "DeleteAllSolutionServicesHandler",
+        "operationId": "DeleteAllSolutionServices",
         "parameters": [
           {
             "type": "string",
@@ -2102,7 +2200,7 @@
           "Resources"
         ],
         "summary": "Get resources count.",
-        "operationId": "GetResourcesCountHandler",
+        "operationId": "GetResourcesCount",
         "parameters": [
           {
             "type": "string",
@@ -2269,7 +2367,7 @@
       "type": "object",
       "properties": {
         "config_maps": {
-          "$ref": "#/definitions/ListCM"
+          "$ref": "#/definitions/ListConfigMaps"
         }
       },
       "x-go-package": "git.containerum.net/ch/resource-service/pkg/models/configmap"
@@ -2777,8 +2875,8 @@
       },
       "x-go-package": "git.containerum.net/ch/resource-service/pkg/models/ingress"
     },
-    "ListCM": {
-      "description": "ListCM -- ConfigMaps list",
+    "ListConfigMaps": {
+      "description": "ListConfigMaps -- ConfigMaps list",
       "type": "array",
       "items": {
         "$ref": "#/definitions/ResourceConfigMap"
@@ -3799,9 +3897,7 @@
       ],
       "properties": {
         "access": {
-          "description": "one of: \"owner\", \"read\", \"write\", \"read-delete\", \"none\"",
           "type": "string",
-          "x-go-name": "Access",
           "$ref": "#/definitions/AccessLevel"
         },
         "id": {
@@ -3815,7 +3911,7 @@
           "x-go-name": "Label"
         }
       },
-      "x-go-package": "git.containerum.net/ch/resource-service/vendor/github.com/containerum/kube-client/pkg/model"
+      "x-go-package": "git.containerum.net/ch/resource-service/pkg/models/headers"
     },
     "UserSolution": {
       "description": "UserSolution -- running solution",
